bk_ida/gccida/g1/global_alloc
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:927:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v142; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:993:8: error: use of undeclared identifier 'eliminables_2'
from = eliminables_2[i].from; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:995:22: error: subscripted value is not an array, pointer, or vector
if ( *(int *)0x661384[2 * i] == 7 && frame_pointer_needed | v2 ) 
             ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1046:42: error: expected expression
for ( k = regs_may_share; k; k = *( rtx *)( *( _QWORD *)&k[1] + 16LL) ) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1093:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0 = v28; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1147:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v38 = ( ( unsigned int)( mode_class_0[*( ( unsigned __int8 *)v31->emit->x_regno_reg_rtx[v43] + 2)] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1192:19: error: expected expression
regs_set = ( rtx *)xmalloc( 16LL * max_parallel); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1255:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v110 = allocno_0; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1256:9: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v111 = &allocno_0[( __int64)v98]; 
        ^~~~~~~~~
        allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1270:14: error: expected ';' after expression
v119 = ( rtx)n[2]; 
             ^
             ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1273:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v120.rtwint = ( __int64)v119->fld[0]; 
                        ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1279:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v122.rtwint = ( __int64)n[3].fld[0]; 
                        ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1284:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v125 = allocno_0; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1299:11: error: invalid operands to binary expression ('long long' and 'struct rtx_def')
if ( v133 == v119[1] ) 
     ~~~~ ^  ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1341:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v117 = allocno_0; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1342:9: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v118 = &allocno_0[v115]; 
        ^~~~~~~~~
        allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1357:48: error: ISO C requires a named parameter before '...'
specqsort( ( char *)v113, v114, 4, ( int ( *)( ...))allocno_compare); 
                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1371:9: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v148 = &allocno_0[v146]; 
        ^~~~~~~~~
        allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:1378:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v143 = allocno_0; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/global_alloc/src/obj/global.o] Error 1
